--- a/javascript/reverseWords.html
+++ b/javascript/reverseWords.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>DO SAME FOR C++ CONVERT STRING INTO ARRAY AND THEN USE REVSER TO THAT ARRAY </h1>
     <script>
-        let s1="MY NAME IS PRERNA";
-        let a2=s1.split(" ");
-
-        console.log("A22",a2);
+        var str = "I LOVE MY COUNTRY";
+        
+     console.log(str.split(/\s/).reverse().join(" "));
     </script>
 </body>
 </html>
